# Randoglobin

./: .gitignore  README.md  pyproject.toml  randoglobin.nuitka-package.config.yml  requirements.txt  run.bat
.github/workflows/: build.yml
randoglobin/: __init__.py  __main__.py  arm.py  constants.py  data_classes.py  image.py  main.py  mnlscript_bis_text_patched.py  mnlscript_misc.py  mnlscript_sidequests.py  mnlscript_skips.py  music.py  palette.py  patch.py  popups.py  rust.rs  sound_test.py  special.py  treasure.py
randoglobin/files/: py_mnlscript_bis_text_patched.py  randodance_randoglobin.yaml  randodance_test.yaml
randoglobin/lang/: EU-FR.qm  NA-ES.qm
