[project]
name = "randoglobin"
version = "0.1.1"
description = "Randomizer for Bowser's Inside Story"
authors = [
    {name = "ThePurpleAnon"}
]
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pyside6 (>=6.9.1,<7.0.0)",
    "mnllib (>=0.2.1,<0.3.0)",
    "ndspy (>=4.2.0,<5.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "cached-path (>=1.7.3,<2.0.0)",
    "rustimport (>=1.7.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
